--- a/LocationVoiture/LocationVoiture/LocationVoiture.csproj
+++ b/LocationVoiture/LocationVoiture/LocationVoiture.csproj
@@ -180,6 +180,18 @@
     <Compile Include="Vues\Reservation\ReservationSearch.Designer.cs">
       <DependentUpon>ReservationSearch.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vues\Succursale\SuccursaleSearch.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vues\Succursale\SuccursaleSearch.Designer.cs">
+      <DependentUpon>SuccursaleSearch.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vues\Succursale\SuccursaleForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vues\Succursale\SuccursaleForm.Designer.cs">
+      <DependentUpon>SuccursaleForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vues\Voiture\VoitureSearch.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -226,6 +238,12 @@
     <EmbeddedResource Include="Vues\Reservation\ReservationSearch.resx">
       <DependentUpon>ReservationSearch.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Vues\Succursale\SuccursaleSearch.resx">
+      <DependentUpon>SuccursaleSearch.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vues\Succursale\SuccursaleForm.resx">
+      <DependentUpon>SuccursaleForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vues\Voiture\VoitureSearch.resx">
       <DependentUpon>VoitureSearch.cs</DependentUpon>
     </EmbeddedResource>
@@ -264,6 +282,7 @@
       <DependentUpon>LocationVoitures.edmx</DependentUpon>
       <LastGenOutput>LocationVoitures.cs</LastGenOutput>
     </Content>
+    <None Include="Resources\logo_black.png" />
     <None Include="Resources\image_928802.gif" />
     <None Include="Resources\image_928801.gif" />
   </ItemGroup>
