--- a/LocationVoiture/LocationVoiture/LocationVoiture.csproj
+++ b/LocationVoiture/LocationVoiture/LocationVoiture.csproj
@@ -120,15 +120,23 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DAO\EmployesDAO.cs" />
+    <Compile Include="DAO\FabricantsDAO.cs" />
+    <Compile Include="DAO\ModelesDAO.cs" />
+    <Compile Include="DAO\ReservationsDAO.cs" />
+    <Compile Include="DAO\SuccursalesDAO.cs" />
+    <Compile Include="DAO\TypesDAO.cs" />
+    <Compile Include="DAO\VehiculesDAO.cs" />
+    <Compile Include="DAO\ClientsDAO.cs" />
+    <Compile Include="Services\ClientsServices.cs" />
     <Compile Include="Services\EmployeServices.cs" />
     <Compile Include="Services\FabricantsServices.cs" />
+    <Compile Include="Services\LoginServices.cs" />
     <Compile Include="Services\ModeleServices.cs" />
     <Compile Include="Services\ReservationsServices.cs" />
     <Compile Include="Services\SuccursalesServices.cs" />
     <Compile Include="Services\TypesServices.cs" />
     <Compile Include="Services\VehiculeServices.cs" />
-    <Compile Include="Services\LoginServices.cs" />
-    <Compile Include="Services\ClientsServices.cs" />
     <Compile Include="Utils\Animations.cs" />
     <Compile Include="Utils\ComboboxItem.cs" />
     <Compile Include="Utils\EnumDescriptor.cs" />
