--- a/LocationVoiture/LocationVoiture/LocationVoiture.csproj
+++ b/LocationVoiture/LocationVoiture/LocationVoiture.csproj
@@ -45,6 +45,9 @@
       <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Lib_LocationVoiture">
+      <HintPath>..\Lib_LocationVoiture\bin\Debug\Lib_LocationVoiture.dll</HintPath>
+    </Reference>
     <Reference Include="MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.6.9.8\lib\net45\MySql.Data.dll</HintPath>
       <Private>True</Private>
@@ -69,74 +72,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller\LocationController.cs" />
-    <Compile Include="Model\administrateur.cs">
-      <DependentUpon>LocationVoitures.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\client.cs">
-      <DependentUpon>LocationVoitures.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\constats_dommages.cs">
-      <DependentUpon>LocationVoitures.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\employe.cs">
-      <DependentUpon>LocationVoitures.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\fabriquant.cs">
-      <DependentUpon>LocationVoitures.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\location.cs">
-      <DependentUpon>LocationVoitures.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\LocationVoitures.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>LocationVoitures.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\LocationVoitures.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>LocationVoitures.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\LocationVoitures.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>LocationVoitures.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="Model\modele.cs">
-      <DependentUpon>LocationVoitures.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\reservation.cs">
-      <DependentUpon>LocationVoitures.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\succursale.cs">
-      <DependentUpon>LocationVoitures.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\type.cs">
-      <DependentUpon>LocationVoitures.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\vehicule.cs">
-      <DependentUpon>LocationVoitures.tt</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DAO\EmployesDAO.cs" />
-    <Compile Include="DAO\FabricantsDAO.cs" />
-    <Compile Include="DAO\ModelesDAO.cs" />
-    <Compile Include="DAO\ReservationsDAO.cs" />
-    <Compile Include="DAO\SuccursalesDAO.cs" />
-    <Compile Include="DAO\TypesDAO.cs" />
-    <Compile Include="DAO\VehiculesDAO.cs" />
-    <Compile Include="DAO\ClientsDAO.cs" />
-    <Compile Include="Services\ClientsServices.cs" />
-    <Compile Include="Services\EmployeServices.cs" />
-    <Compile Include="Services\FabricantsServices.cs" />
-    <Compile Include="Services\LoginServices.cs" />
-    <Compile Include="Services\ModeleServices.cs" />
-    <Compile Include="Services\ReservationsServices.cs" />
-    <Compile Include="Services\SuccursalesServices.cs" />
-    <Compile Include="Services\TypesServices.cs" />
-    <Compile Include="Services\VehiculeServices.cs" />
     <Compile Include="Utils\Animations.cs" />
     <Compile Include="Utils\ComboboxItem.cs" />
     <Compile Include="Utils\EnumDescriptor.cs" />
@@ -267,13 +204,6 @@
     <EmbeddedResource Include="Vues\Voiture\VoitureForm.resx">
       <DependentUpon>VoitureForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EntityDeploy Include="Model\LocationVoitures.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>LocationVoitures.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="Model\LocationVoitures.edmx.diagram">
-      <DependentUpon>LocationVoitures.edmx</DependentUpon>
-    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -289,16 +219,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Model\LocationVoitures.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>LocationVoitures.edmx</DependentUpon>
-      <LastGenOutput>LocationVoitures.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="Model\LocationVoitures.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>LocationVoitures.edmx</DependentUpon>
-      <LastGenOutput>LocationVoitures.cs</LastGenOutput>
-    </Content>
     <None Include="Resources\logo_black.png" />
     <None Include="Resources\image_928802.gif" />
     <None Include="Resources\image_928801.gif" />
