--- a/LocationVoiture/LocationVoiture/LocationVoiture.csproj
+++ b/LocationVoiture/LocationVoiture/LocationVoiture.csproj
@@ -89,6 +89,12 @@
     <Compile Include="Vues\Employe\EmployeForm.Designer.cs">
       <DependentUpon>EmployeForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vues\Location\LocationFacture.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vues\Location\LocationFacture.Designer.cs">
+      <DependentUpon>LocationFacture.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vues\Location\LocationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -176,6 +182,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Vues\Employe\EmployeForm.resx">
       <DependentUpon>EmployeForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vues\Location\LocationFacture.resx">
+      <DependentUpon>LocationFacture.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vues\Location\LocationForm.resx">
       <DependentUpon>LocationForm.cs</DependentUpon>
